# Brand-Studio

./: .env.example  .gitignore  CAPSTONE_DEPLOYMENT_SUMMARY.md  CLAUDE.md  DEPLOYMENT.md  GCP_SETUP_NOW.md  INTERACTIVE_CLI_GUIDE.md  QUICKSTART.md  QUICK_START.md  README.md  RUN_LOCALLY.md  TESTING.md  WARNINGS_SUPPRESSED.md  app.py  deploy_agent.py  pyproject.toml  quick_test.py  requirements.txt  test_migration.py  test_phase2.py  test_rag_integration.py  test_validation_enhancements.py  verify_deployment_ready.py  web_app.py
.brand-sessions/: my-brand-v2.json  my-brand.json  test-fitness.json
brand_studio_agent/: .agent_engine_config.json  __init__.py  agent.py  requirements.txt
coursework/: DAY1_README.md  DAY2_README.md  DAY3_README.md  DAY4_README.md  DAY5_README.md  day_1a_prompt_to_action.py  day_1b_agent_architectures.py  day_2a_agent_tools.py  day_2b_agent_tools_best_practices.py  day_3a_agent_sessions.py  day_3b_agent_memory.py  day_4a_agent_observability.py  day_4b_agent_evaluation.py  day_5a_agent2agent_communication.py  day_5b_agent_deployment.py
data/: brand_embeddings.jsonl  brand_metadata.json  brand_names.json  brands_temp.json
data/scripts/: curate_brands.py  validate_dataset.py
docs/: ADK_ALIGNMENT_AUDIT.md  ADK_MIGRATION_PLAN.md  INTERACTIVE_NAME_FEEDBACK.md  MIGRATION_COMPLETION_CHECKLIST.md  ROLLBACK_PROCEDURES.md  logging-queries.md
scripts/: deploy.sh  deploy_vector_search.py  get_vector_search_config.py  setup_gcp.sh  verify_setup.py
specs/: overviewspec.md
src/: cli.py  cli_old_automated.py.bak  cli_old_commands.py.bak  main.py
src/agents/: __init__.py  base_adk_agent.py  collision_agent.py  name_generator.py  orchestrator.py  research_agent.py  seo_agent.py  story_agent.py  validation_agent.py
src/data/: __init__.py  (+1 more)
tasks/: prd-ai-brand-studio.md  tasks-adk-migration-plan.md  tasks-prd-ai-brand-studio.md
templates/: index.html
tests/: eval_config.json  test_cli.py  test_logging.py  test_memory_bank.py  test_orchestrator.py
(+23 files in other folders)
