[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-brand-studio"
version = "0.1.0"
description = "Multi-agent system for generating legally-clear, SEO-optimized brand names with complete brand narratives"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AI Brand Studio Team"}
]
keywords = ["ai", "branding", "agents", "vertex-ai", "trademark", "seo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "google-cloud-aiplatform>=1.38.0",
    "google-cloud-logging>=3.8.0",
    "google-cloud-secret-manager>=2.16.0",
    "google-cloud-storage>=2.10.0",
    "google-adk>=0.1.0",
    "google-generativeai>=0.3.0",
    "opentelemetry-instrumentation-google-genai",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "python-whois>=0.8.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]

[project.scripts]
brand-studio = "src.main:main"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
